tests/idris2/error/error016/Issue1230.idr
record R where
  constructor MkR
  field : Nat

myRec1 : R
myRec1 = MkR 3

mkRec2 : R
myRec2 = MkR 3
